# CSCI711-Global-Illumination

./: 1.0refraction_checkpoint6_raytraced_scene.ppm  1.33refraction0.1Kt_checkpoint6_raytraced_scene.ppm  1.33refraction_checkpoint6_raytraced_scene.ppm  1.5refraction_0.1Kt_checkpoint6_raytraced_scene.ppm  1.5refraction_checkpoint6_raytraced_scene.ppm  README.md  ReinhardHi_checkpoint7_raytraced_scene.ppm  ReinhardLo_checkpoint7_raytraced_scene.ppm  ReinhardMed_checkpoint7_raytraced_scene.ppm  WardHi_checkpoint7_raytraced_scene.ppm  WardLo_checkpoint7_raytraced_scene.ppm  WardMed_checkpoint7_raytraced_scene.ppm  checkpoint3_raytraced_scene.ppm  checkpoint4_raytraced_scene.ppm  checkpoint5_raytraced_scene.ppm
Checkpoint3/: checkpoint3_raytraced_scene.ppm
Checkpoint4/: checkpoint4_raytraced_scene.ppm
Checkpoint5/: checkpoint5_raytraced_scene.ppm
Checkpoint6/: 1.0refraction_checkpoint6_raytraced_scene.ppm  1.33refraction0.1Kt_checkpoint6_raytraced_scene.ppm  1.33refraction_checkpoint6_raytraced_scene.ppm  1.5refraction_0.1Kt_checkpoint6_raytraced_scene.ppm  1.5refraction_checkpoint6_raytraced_scene.ppm
Checkpoint7/: ReinhardHi_checkpoint7_raytraced_scene.ppm  ReinhardLo_checkpoint7_raytraced_scene.ppm  WardHi_checkpoint7_raytraced_scene.ppm  (+3 more)
Code/Global_Illumination/: CMakeLists.txt  cornell_box - Shortcut.lnk  globals.cpp  globals.h  kdTree.cpp  kdTree.h  main.cpp  math.cpp  math.h  objects.cpp  objects.h  photon.h  photonMap.cpp  photonMap.h  rayTracer.cpp  rayTracer.h  readScene.cpp  readScene.h  scene_input - Shortcut.lnk  toneReproduction.cpp  toneReproduction.h
(+4 files in other folders)
